# PyCHAMP

./: .gitignore  .readthedocs.yaml  Justfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  dataForMetricesCalc.csv  dataForSimulation.csv  example_SD6.rst  general_intro.rst  index.rst  model_flexibility.csv  py_champ.components.aquifer.rst  py_champ.components.behavior.rst  py_champ.components.field.rst  py_champ.components.finance.rst  py_champ.components.optimization.rst  py_champ.components.well.rst  py_champ.entities.aquifer.rst  py_champ.entities.behavior.rst  py_champ.entities.decision_making.rst  py_champ.entities.field.rst  py_champ.entities.finance.rst  py_champ.entities.optimization.rst  py_champ.entities.well.rst  simpleInput.csv  sphinx_steps.txt  tutorial.rst  unused_text.rst  usage.rst
examples/SD6 Model/: Data_SD6.csv  Inputs_SD6.pkl  simple_run.py  test_file.py
miniCHAMP/: __init__.py  config.py  main_opt_RS.py  miniCHAMP.py  miniCHAMP_config.py  miniCHAMP_entities.py  miniCHAMP_opt.py  opt_model.py  util.py
miniCHAMP/entities/: aquifer.py  farmer.py  field.py  finance.py  well.py
py_champ/: __init__.py  config.py  opt_model.py  util.py
py_champ/components/: __init__.py  aquifer.py  behavior.py  field.py  finance.py  optimization.py  optimization_1f1w.py  optimization_1f1w_ci.py  optimization_new.py  optimization_revised.py  well.py
py_champ/entities/: __init__.py  aquifer.py  behavior.py  decision_making.py  farmer.py  farmer_org.py  field.py  finance.py  opt_model.py  well.py
(+27 files in other folders)
