requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_champ"
version = "1.0.0"
authors = [
    {name = "Chung-Yi Lin", email = "philip928lin@gmail.com"}
]
license = {text = "GNU General Public License v3 (GPLv3)"}
description = "file: README.md"
dependencies = [
  "hatchling",
  "numpy",
  "pandas",
  "gurobipy",
  "scipy",
  "joblib",
  "mesa==2.1.1"
]
