requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_champ"
version = "1.0.0"
authors = [
    {name = "Chung-Yi Lin", email = "philip928lin@gmail.com"}
]
license = {text = "GNU General Public License v3 (GPLv3)"}
description = "file: README.md"
dependencies = [
  "hatchling",
  "numpy",
  "pandas",
  "gurobipy",
  "scipy",
  "joblib",
  "mesa==2.1.1"
]

[project.optional-dependencies]
dev = [
    "ipython"
]
lint = [
    "pre-commit>=2.20.0",
]

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
